--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,10 +1,13 @@
 {
+  "item.tutorialmod.eight_ball": "Eight Ball",
+
   "item.tutorialmod.raw_tanzanite": "Raw Tanzanite",
   "item.tutorialmod.tanzanite": "Tanzanite",
 
   "block.tutorialmod.tanzanite_block": "Block of Tanzanite",
   "block.tutorialmod.tanzanite_ore": "Tanzanite Ore",
   "block.tutorialmod.deepslate_tanzanite_ore": "Deepslate Tanzanite Ore",
+
 
   "itemGroup.tutorialmod.tanzanite": "Tanzanite Tutorial Tab"
 }
