--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -7,8 +7,21 @@
   "block.tutorialmod.tanzanite_block": "Block of Tanzanite",
   "block.tutorialmod.tanzanite_ore": "Tanzanite Ore",
   "block.tutorialmod.deepslate_tanzanite_ore": "Deepslate Tanzanite Ore",
+  "block.tutorialmod.netherrack_tanzanite_ore": "Netherrack Tanzanite Ore",
+  "block.tutorialmod.endstone_tanzanite_ore": "Endstone Tanzanite Ore",
   "block.tutorialmod.jumpy_block": "Jumpy Block",
   "block.tutorialmod.tanzanite_lamp": "Tanzanite Lamp",
+
+  "item.tutorialmod.eggplant": "Eggplant",
+  "item.tutorialmod.eggplant_seeds": "Eggplant Seeds",
+  "block.tutorialmod.eggplant_crop": "Eggplant Crop",
+
+  "entity.minecraft.village.jumpmaster": "Jump Master",
+
+  "key.category.tutorialmod.tutorial": "Tutorial Mod Keybindings",
+  "key.tutorialmod.drink_water": "Drink Water Key",
+
+
 
 
   "itemGroup.tutorialmod.tanzanite": "Tanzanite Tutorial Tab"
